--- a/challengeperiode01/challenge1/scissormagic.html
+++ b/challengeperiode01/challenge1/scissormagic.html
@@ -10,39 +10,4 @@
 <img src="img/scissor-magic-logo.jpg" height="158" width="200"/>
 
 
-<br><br>
-
-<!--pagina links-->
-<td>• <a href="scissormagic.html">Home</a><br></td>
-<td>• <a href="scissormagicproducten.html">Producten</a><br></td>
-<dt>• <a href="scissormagicsalons.html">Salons</a><br></dt>
-<dt>• <a href="scissormagicopeningstijden.html">Openingstijden</a></dt>
-
-<br><br>
-
-<!--tabel met prijzen-->
-<table border="1" width="400">
-    <tr><td colspan="2" align="center"><strong>Prijzen</strong></td></tr>
-    <tr><td>Profesioneel advies</td><td>€ 27,50</td></tr>
-    <tr><td>Wassen, knippen, drogen</td><td>€ 12,50</td></tr>
-    <tr><td>Modelföhnen</td><td>€ 15,00</td></tr>
-    <tr><td>Kleurspoeling</td><td>€ 32,75</td></tr>
-
-    <!--tabel cel rowspan-->
-    <tr><td rowspan="2">Highlights</td><td>€ 12,50</td></tr>
-        <tr><td>Max.10 highlights</td></tr>
-
-    <tr><td>Permanente kleuring</td><td>€ 23,50</td></tr>
-    <tr><td>Balayage</td><td>€ 14,50</td></tr>
-</table>
-
-<br>
-
-<h4>Onze specialiteiten</h4>
-<img src="img/dreadlocks01x300.jpg" height="300" width="300"/>
-<img src="img/afro01x300.jpg" height="300" width="300"/>
-<img src="img/redhead01x300.jpg" height="300" width="300"/>
-
-
-</body>
-</html>
+<br><br>github how to delete a branch
