--- a/challengeperiode01/challenge1/scissormagicsalons.html
+++ b/challengeperiode01/challenge1/scissormagicsalons.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>scissor magic</title>
 </head>
 <body>
+
+<!--site logo-->
+<img src="img/scissor-magic-logo.jpg" height="158" width="200"/>
+
+
+<br><br>
 
 </body>
 </html>
